# C-DZ

./: 2.12.25.cpp  2.12.25_2.cpp  23.09.25.cpp  26.09.2025.cpp  28.09.25.cpp  LiveHardware.py  dz.cpp  dz2.cpp  funkcii.cpp  lesha_project.cpp  main.cpp  nested_loops.cpp  nested_loops_debug.cpp  oblast_vidimosti.cpp  odn_massiv.cpp  prototype.cpp  rand_mass.cpp  stl_tasks  stl_tasks.cpp  stroki.cpp  test.cpp  ukazateli.cpp
C#/: 01.06.26.cs  06.06.26.cs  10.05.26_2.cs  10.05.26_osnovi.cs  13.05.26.cs  14.05.26_2.cs  14.05.26_3.cs  14.05.26_praktik.cs  15.05.26.cs  15.05.26_2.cs  15.05.26_3.cs  25.05.26.cs  28.05.26.cs  28.05.26_2.cs  28.05.26_tamagochi.cs
C#/project/: Program.cs
Qt/01_04_26/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Qt/01_04_26_2/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Qt/10_04_26/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Qt/6_3/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Qt/Journey/: CHANGES.md  CMakeLists.txt  ScheduleManager.cpp  ScheduleManager.h  ScheduleModels.h  ScheduleWidget.cpp  ScheduleWidget.h  apiclient.cpp  authmanager.cpp  loginwindow.cpp  loginwindow.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  parserrunner.cpp  test_auth.cpp
Qt/Journey/core/auth/: AuthModels.h  authmanager.cpp  authmanager.h
Qt/Journey/core/schedule/: ParserRunner.h  ScheduleManager.cpp  ScheduleManager.h  parserrunner.cpp
Qt/Journey/data/db/: db.py  dz.py  homework.db  parser_homework.py  parser_main.py
Qt/Journey/data/db/ittopjournal/: __init__.py  config.py  core.py
Qt/Journey/db/: schedule.db
Qt/Journey/ui/login/: loginwindow.cpp
Qt/Journey/ui/main/: ScheduleWidget.cpp  ScheduleWidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
Qt/ListManager/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Qt/TextEditor/: CMakeLists.txt  application.cpp  application.h  document.cpp  document.h  graphicdocument.cpp  graphicdocument.h  graphicwindow.cpp  graphicwindow.h  graphicwindow.ui  imageformat.cpp  imageformat.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  textdocument.cpp  textdocument.h
Qt/big3/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
Qt/calculator/: mainwindow.cpp  mainwindow.h  mainwindow.ui
Qt/first/: CMakeLists.txt  main.cpp
Qt/journalTEST/: AuthModels.h  CMakeLists.txt  ScheduleManager.cpp  ScheduleModels.h  ScheduleWidget.cpp  apiclient.h  authmanager.cpp  authmanager.h  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Qt/linkedSort/: CMakeLists.txt  main.cpp
Qt/notepad/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Qt/prnod/: CMakeLists.txt  Nod.cpp  main.cpp
Qt/rectangle/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
XML/: .$Проект.drawio.dtmp  Диаграмма без названия.drawio  Проект.drawio  минипроект.drawio  чтото.drawio
dz/: 1.12.25  1.12.25.cpp  10.10.25.cpp  10.10.25_1.cpp  12.12.25.cpp  15.11.25.cpp  15.12.25.cpp  15.12.25_2  15.12.25_2.cpp  17.10.25.cpp  17.11.25.cpp  17.11.25.py  21.11.25.cpp  21.11.25_2.cpp  21.11.25_3.cpp  22.12.25.cpp  25.10.25_2.cpp  28.11.25  28.11.25.cpp  30.09.25  30.09.25.cpp  31.10.25.cpp  31.10.25_2.cpp  5.12.25.cpp  7.11.25.cpp  9.12.25.cpp  classes_24.01.26.py  clean_code  clean_code.cpp  din_mas_21.01.26.cpp  enum_17.01.26  enum_17.01.26.cpp  human_house_2_31.01.26.py  human_house_31.01.26.py  makrosi_31.01.26.cpp  mnog_mas_24.01.26.cpp  nasledov_inkapsul_30.01.26.py  numerical_values_6.12.25.cpp  numerical_values_6.12.25_2.cpp  strukturi_24.01.26.cpp  (+3 more)
numerical methods/: 16.12.25  16.12.25.cpp  20.12.25.cpp  20.12.25_2.cpp  29.12.25.cpp  29.12.25_2.cpp
oop/: dinamic_structur.cpp  nasledovanie.cpp  poliformizm.cpp  try_trhow.cpp
output/: 2.12.25  dz  lesha_project  main  nested_loops  oblast_vidimosti  test
practic/: 03.10.25_for.cpp  03.10.25_for_2.cpp  06.10.10.cpp  06.10.10_2.cpp  10.12.25.cpp  123423523.cpp  17.11.25.cpp  2.12.25.cpp  21.11.25.cpp  30.09.25.cpp  5.12.25.cpp  black box.docx  black_code  black_code.cpp  cont  cont.cpp  evristika_1.13.26.cpp  files_31.01.26.cpp  izi_C++_18.01.26  izi_C++_18.01.26.cpp  nod.py
project_1/: colors.h  file.h  main  main.cpp  main2.cpp  screen.h  search.h  song.h
Разработка программных модулей/: main.py  Отчет_по_сортировкам.docx
(+414 files in other folders)
